--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "defcon",
+  "name": "fluxchat",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
     "express": "~4.12.4",
-    "socket.io": "~1.3.5",
-    "flux": "~2.0.3"
+    "socket.io": "~1.3.5"
   },
   "engines": {
     "node": "*"
